Fix for random button on About page being too tall

--- a/src/about/About.css
+++ b/src/about/About.css
@@ -23,4 +23,5 @@
 
 .RandomButton {
     width: 15em;
+    flex-grow: 0;
 }
